# attractor-rust

./: Cargo.toml  README.md
resource/: screencast.webm
src/: attractor.rs  gui.rs  lib.rs  main.rs
src/attractor/: image.rs  lyapunov.rs  point.rs  quadratic2d.rs  raster.rs  swarm.rs
src/gui/: app.rs  image_widget.rs
