[package]
name = "attractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.1"
eframe = "0.18.0"
image = "0.24.3"

[lib]
name = "attractor"
path = "src/lib.rs"

[[bin]]
name = "attractor"
path = "src/main.rs"
