[package]
name = "attractor"
version = "0.1.0"
edition = "2021"

[dependencies]
colorgrad = "0.6.1"
eframe = "0.18.0"
image = "0.24.3"
rand = "0.8.5"
rayon = "1.5.3"
strum = "0.24.1"
strum_macros = "0.24.2"

[[bin]]
name = "attractor"
path = "src/main.rs"

[profile.release]
debug = true # to allow useful perf reports
